Use Files.readAllLines and write because writeString and readString aren't working